Edited title and description of website; Changed y-axis label and bounds during zoom.

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Cryptomate is a cryptocurrency app that displays current information about the current market, individual cryptocurrency details, market exchanges, and the most recent related news."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Crytomate</title>
+    <title>Cryptomate</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
